--- a/tables/tableEfectividad.tex
+++ b/tables/tableEfectividad.tex
@@ -2,46 +2,46 @@
 \centering
 \label{tab:t1}
 \scriptsize
-\begin{tabular}{|c c|ccc|ccc|ccc|}
+\begin{tabular}{|c c|cc|cc|cc|}
 \midrule
-\multicolumn{2}{|c|}{\multirow{3}{*}{\textbf{Cases}}} & \multicolumn{9}{c|}{\textbf{Efectividad}} \\
-\cline{3-11}
-\multicolumn{2}{|c|}{} & \multicolumn{3}{c}{\textbf{GA}} & \multicolumn{3}{c}{\textbf{HC}} & \multicolumn{3}{c|}{\textbf{SubSet}} \\
-\multicolumn{2}{|c|}{} & \textbf{\tiny{BE}} & \textbf{\tiny{RO}} & \textbf{\tiny{SS}} & \textbf{\tiny{BE}} & \textbf{\tiny{RO}} & \textbf{\tiny{SS}} & \textbf{\tiny{BE}} & \textbf{\tiny{RO}} & \textbf{\tiny{SS}}\\
+\multicolumn{2}{|c|}{\multirow{3}{*}{\textbf{Cases}}} & \multicolumn{6}{c|}{\textbf{Efectividad}} \\
+\cline{3-8}
+\multicolumn{2}{|c|}{} & \multicolumn{2}{c}{\textbf{GA}} & \multicolumn{2}{c}{\textbf{HC}} & \multicolumn{2}{c|}{\textbf{SubSet}} \\
+\multicolumn{2}{|c|}{} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} \\
 \midrule
-\multicolumn{2}{|c|}{\textbf{NCL}} & 12  & 12  & 12 &  12 &12 &  12&   12& 12  &  12 \\
+\multicolumn{2}{|c|}{\textbf{NCL}} &   &   &  &  0.75 & &  1.33 \\
 \midrule
-\multicolumn{2}{|c|}{\textbf{UFInd}}&   &   &   &   &   &   &   &   &   \\
-\midrule
-
-\multicolumn{2}{|c|}{\textbf{FHeap}} &   &   &   &   &   &   &   &   &   \\
+\multicolumn{2}{|c|}{\textbf{UFInd}}&   &   &   &   &   &      \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{BTree}} &   &   &   &   &   &   &   &   &   \\
+\multicolumn{2}{|c|}{\textbf{FHeap}}& 0 & 0  &  0 &  0 &  0 &  0   \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{BHeap}} &   &   &   &   &   &   &   &   &   \\
+\multicolumn{2}{|c|}{\textbf{BTree}} & 0 & 0  &  0 &  0 &  0 &  0  \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{Lits}} &   &   &   &   &   &   &   &   &   \\
+\multicolumn{2}{|c|}{\textbf{BHeap}}& 0 & 0  &  0 &  0 &  0 &  0   \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{Sched.}} &   &   &   &   &   &   &   &   &   \\
-
-\midrule
-\multicolumn{2}{|c|}{\textbf{LinkedList}} &5   &   &   &  108 &  &   &  17 &   &   \\
+\multicolumn{2}{|c|}{\textbf{Lits}} &   &   &   &   &   &    \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{TreeMap}} &   &   &   &   &   &   &   &   &   \\
+\multicolumn{2}{|c|}{\textbf{Sched.}} &   & 0.75   &   &  0 &   & 0   \\
+
+\midrule
+\multicolumn{2}{|c|}{\textbf{LinkedList}} &  &  1.25 &   &  1 &  &  1.25  \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{TreeSet}} &   &   &   &   &   &   &   &   &   \\
+\multicolumn{2}{|c|}{\textbf{TreeMap}} &   &   &   &   &   &     \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{HashSet}} &   &   &   &   &   &   &   &   &   \\
+\multicolumn{2}{|c|}{\textbf{TreeSet}} &   &   &   &   &   &    \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{HashMap}} &   &   &   &   &   &   &   &   &   \\
+\multicolumn{2}{|c|}{\textbf{HashSet}} &   &   &   &   &   &    \\
+\midrule
+
+\multicolumn{2}{|c|}{\textbf{HashMap}} &   &   &   &   &   &    \\
 \hline
 \end{tabular}
 
