--- a/tables/eficaciaBuilders.tex
+++ b/tables/eficaciaBuilders.tex
@@ -9,7 +9,7 @@
 \multicolumn{2}{|c|}{} & \multicolumn{2}{c}{\textbf{GA}} & \multicolumn{2}{c}{\textbf{HC}} & \multicolumn{2}{c|}{\textbf{SubSet}} \\
 \multicolumn{2}{|c|}{} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} \\
 \midrule
-\multicolumn{2}{|c|}{\textbf{NCL}} &   &   &  &  0.75 & &  1.33 \\
+\multicolumn{2}{|c|}{\textbf{NCL}} & 0  &  1 & 0 &  0.75 &0 &  1.33 \\
 \midrule
 \multicolumn{2}{|c|}{\textbf{UFInd}}&   &   &   &   &   &      \\
 \midrule
@@ -23,7 +23,7 @@
 \multicolumn{2}{|c|}{\textbf{BHeap}}& 0 & 0  &  0 &  0 &  0 &  0   \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{Lits}} &   &   &   &   &   &    \\
+\multicolumn{2}{|c|}{\textbf{Lits}} &   & 0.50  &   & \emph{0}  &   & 0   \\
 \midrule
 
 \multicolumn{2}{|c|}{\textbf{Sched.}} &   & 0.75   &   &  0 &   & 0   \\
